--- a/Assignment/consultant/consultant2.html
+++ b/Assignment/consultant/consultant2.html
@@ -37,7 +37,7 @@
         
 
             <div class="info">
-                <div class="navside_all">
+                <div class="navside_all navside_all_2">
                     <a href="profile.html">รายชื่อนักศึกษา</a>
                     <a href="consultant2.html" class="navside_all_one">คำขอ</a>
                 </div>
