--- a/Assignment/consultant/profile.html
+++ b/Assignment/consultant/profile.html
@@ -37,7 +37,7 @@
         
 
             <div class="info">
-                <div class="navside_all">
+                <div class="navside_all navside_all_2">
                     <a href="profile.html" class="navside_all_one">รายชื่อนักศึกษา</a>
                     <a href="consultant2.html">คำขอ</a>
                 </div>
@@ -115,7 +115,7 @@
                             <div class="page_1_1 report_bt"><button onclick="showpage('consultant_home1')">ย้อนกลับ</button></div>
                             <div class="report_head"><h2>แสดงความคิดเห็น</h2></div>
                             <div class="report_1">
-                                <div>
+                                <div class="report_1_1">
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="#">
                                 </div>
@@ -335,7 +335,7 @@
                             <div class="page_1_1 report_bt"><button onclick="showpage('consultant_home1')">ย้อนกลับ</button></div>
                             <div class="report_head"><h2>แสดงความคิดเห็น</h2></div>
                             <div class="report_1">
-                                <div>
+                                <div class="report_1_1">
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="#">
                                 </div>
