--- a/Assignment/login/index.html
+++ b/Assignment/login/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="nav_left">
-            <div class="nav_left_img"><img src="../img/LOGO-KMUTNB--300x300.png" alt="Kmutnb"></div>
+            <div class="nav_left_img"><img src="../img/1.png" alt="Kmutnb"></div>
             <div class="nav_left_txt"><h3>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ วิทยาเขตปราจีนบุรี</h3></div>
         </div>
         <div class="nav_head">
