--- a/Assignment/std/progress.html
+++ b/Assignment/std/progress.html
@@ -57,7 +57,7 @@
 
                         <div class="progress_all">
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 1</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 1</h3><div class="progress_all_2 finish">สำเร็จ 10%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
@@ -68,7 +68,7 @@
                                 <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 2</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 2</h3><div class="progress_all_2 finish">สำเร็จ 10%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
@@ -79,7 +79,7 @@
                                 <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 3</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 3</h3><div class="progress_all_2 finish">สำเร็จ 10%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
@@ -90,7 +90,7 @@
                                 <button>บันทึก</button>
                             </div>
                             <div class="progress_all_">
-                                <div class="progress_all_1"><h3>สัปดาห์ที่ 4</h3><div class="progress_all_2">สำเร็จ 10%</div></div>
+                                <div class="progress_all_1"><h3>สัปดาห์ที่ 4</h3><div class="progress_all_2 finish">สำเร็จ 10%</div></div>
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
