--- a/Assignment/std/proposal_sub.html
+++ b/Assignment/std/proposal_sub.html
@@ -55,6 +55,11 @@
                                 <option value="">โครงงานพิเศษ</option>
                                 <option value="">โครงงานสหกิจ</option>
                             </select>
+                            <h5>วิชาที่อยู่ในประเภทโครงงานที่เลือก:</h5>
+                            <select name="" id="">
+                                <option value="">Intro</option>
+                                <option value="">Computer Programming</option>
+                            </select>
                             <h4>รายละเอียดโครงงาน</h4><br>
                             <h5>ชื่อโครงงาน:</h5>
                             <input type="text">
