--- a/Assignment/subject/2.html
+++ b/Assignment/subject/2.html
@@ -37,7 +37,7 @@
         
 
             <div class="info">
-                <div class="navside_all">
+                <div class="navside_all navside_all_2">
                     <a href="profile.html">รายชื่อโครงงาน</a>
                     <a href="2.html" class="navside_all_one">จัดการสอบหัวข้อ</a>
                     <a href="3.html">จัดการสอบจบ</a>
@@ -131,6 +131,40 @@
                         </div>
                     </div>
                     <div id="subject_2_1" class="page">
+                        <div>
+                            <div class="subject_2">
+                                <h3>กำหนดรายละเอียดการสอบ</h3>
+                                <h4>กำหนดคณะกรรมการสอบ</h4>
+                                กรรมการคนที่ 1
+                                <select name="" id="" >
+                                    <option value="" disabled selected>โปรดระบุกรรมการคนที่ 1</option>
+                                    <option value="">นายข</option>
+                                    <option value="">นายก</option>
+                                </select>
+                                กรรมการคนที่ 2
+                                <select name="" id="" >
+                                    <option value="" disabled selected>โปรดระบุกรรมการคนที่ 2</option>
+                                    <option value="">นายข</option>
+                                    <option value="">นายก</option>
+                                </select>
+                                กรรมการคนที่ 3
+                                <select name="" id="" >
+                                    <option value="" disabled selected>โปรดระบุกรรมการคนที่ 3</option>
+                                    <option value="">นายข</option>
+                                    <option value="">นายก</option>
+                                </select>
+                                <h4>กำหนดวัน เวลา สถานที่สอบ</h4>
+                                กำหนดวันสอบ
+                                <input type="date">
+                                กำหนดเวลาสอบ
+                                <input type="date">
+                                สถานที่สอบ
+                                <input type="date">
+                                หมายเหตุ
+                                <textarea name="" id=""></textarea>
+                            </div>
+                        </div>
+
                         <button onclick="showpage('subject_1')">1</button>
                     </div>
                     <div id="subject_2_2" class="page">
