--- a/Assignment/subject/3.html
+++ b/Assignment/subject/3.html
@@ -37,7 +37,7 @@
         
 
             <div class="info">
-                <div class="navside_all">
+                <div class="navside_all navside_all_2">
                     <a href="profile.html">รายชื่อโครงงาน</a>
                     <a href="2.html">จัดการสอบหัวข้อ</a>
                     <a href="3.html" class="navside_all_one">จัดการสอบจบ</a>
