--- a/Assignment/subject/profile.html
+++ b/Assignment/subject/profile.html
@@ -37,7 +37,7 @@
         
 
             <div class="info">
-                <div class="navside_all">
+                <div class="navside_all navside_all_2">
                     <a href="profile.html" class="navside_all_one">รายชื่อโครงงาน</a>
                     <a href="2.html">จัดการสอบหัวข้อ</a>
                     <a href="3.html">จัดการสอบจบ</a>
@@ -46,7 +46,7 @@
 
                 <div class="info_all">
                     <div id="consultant_home1" class="page active">
-                        <h3>รายชื่อนักศึกษาที่กำลังดูแล</h3>
+                        <h3>รายชื่อโครงงานภายใต้วิชา</h3>
 
 
                         <div class="consultant_home_1">
@@ -116,7 +116,7 @@
                             <div class="page_1_1 report_bt"><button onclick="showpage('consultant_home1')">ย้อนกลับ</button></div>
                             <div class="report_head"><h2>แสดงความคิดเห็น</h2></div>
                             <div class="report_1">
-                                <div>
+                                <div class="report_1_1">
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="#">
                                 </div>
@@ -191,9 +191,9 @@
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
                                 <div class="consultant_progress_3_download"><a href="#" download class="consultant_progress_3_download_1">Download</a><div class="consultant_progress_3_download_2"></div></div>
                             </div>
                             <div class="consultant_progress_4">
@@ -205,9 +205,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -219,9 +219,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -233,9 +233,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -247,9 +247,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -261,9 +261,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -275,9 +275,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -289,9 +289,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -303,9 +303,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -317,9 +317,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -334,7 +334,7 @@
                             <div class="page_1_1 report_bt"><button onclick="showpage('consultant_home1')">ย้อนกลับ</button></div>
                             <div class="report_head"><h2>แสดงความคิดเห็น</h2></div>
                             <div class="report_1">
-                                <div>
+                                <div class="report_1_1">
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="#">
                                 </div>
@@ -404,10 +404,10 @@
                                 <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
-                                <input type="file">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id=""></textarea>
+                                <div class="consultant_progress_3_download"><a href="#" download class="consultant_progress_3_download_1">Download</a><div class="consultant_progress_3_download_2"></div></div>
                             </div>
                             <div class="consultant_progress_4">
                                 <div class="consultant_progress_4_all">
@@ -418,9 +418,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -432,9 +432,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -446,9 +446,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -460,9 +460,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -474,9 +474,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -488,9 +488,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -502,9 +502,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -516,9 +516,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
@@ -530,9 +530,9 @@
                                     <p>รายละเอียดงานที่ทำ</p>
                                 <input type="text" readonly placeholder="">
                                 <p>ข้อคิดเห็นจากอาจารย์ที่ปรึกษา</p>
-                                <textarea name="" id=""></textarea>
-                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
+                                <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
+                                <textarea name="" id="" readonly></textarea>
                                 <div class="consultant_progress_4_download"><a href="#" download class="consultant_progress_4_download_1">Download</a><div class="consultant_progress_4_download_2"></div></div>
                                 <button>เลือก</button>
                                 </div>
