--- a/Assignment/std/proposal_status.html
+++ b/Assignment/std/proposal_status.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student</title>
     <link rel="stylesheet" href="../css/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
         <div>
@@ -67,10 +68,11 @@
                                 <h4>โดย กรรมการคุมสอบหัวข้อ</h4>
 
 
-                                <div>
-                                    กรรมการคนที่ 1 <input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
-                                    กรรมการคนที่ 2 <input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
-                                    กรรมการคนที่ 3 <input type="text" readonly placeholder="ยังไม่มีการอนุมัติ">
+                                <div class="proposal_status_section_2">
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">กรรมการคนที่ 1</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">กรรมการคนที่ 2</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">กรรมการคนที่ 3</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    
                                 </div>
 
 
@@ -78,10 +80,11 @@
 
 
                                 <div class="proposal_status_section_2">
-                                    วันที่<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
-                                    เวลา<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
-                                    สถานที่<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"><br>
-                                    หมายเหตุ<input type="text" readonly placeholder="ยังไม่มีการอนุมัติ">
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">วันที่</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">เวลา</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">สถานที่</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">หมายเหตุ</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    
                                 </div>
                             </div>
 
