--- a/Assignment/std/exam_regis.html
+++ b/Assignment/std/exam_regis.html
@@ -47,8 +47,8 @@
                 <div class="info_all">
                     <div class="exam_regis">
                         <div class="exam_regis_head">
-                            <h1>Final Exam</h1>
-                            <h2>Registration</h2>
+                            <h1> ลงทะเบียนสอบ</h1>
+                            
                         </div>
                         <h3>กรอกข้อมูลโครงงาน</h3>
                         <div class="exam_regis_section_1">
