--- a/Assignment/std/profile.html
+++ b/Assignment/std/profile.html
@@ -55,7 +55,7 @@
 
 
                         <div class="profile_head">
-                            <h1>Profile</h1>
+                            <h1>โปรไฟล์</h1>
                             <img src="../img/LOGO-KMUTNB--300x300.png" alt="profile">
                         </div>
 
