--- a/Assignment/std/proposal_status.html
+++ b/Assignment/std/proposal_status.html
@@ -52,8 +52,7 @@
 
 
                         <div class="proposal_status_head">
-                            <h1>Project</h1>
-                            <h3>Proposal Status</h3>
+                            <h1>สถานะหัวข้อ</h1>
                         </div>
 
 
@@ -69,9 +68,9 @@
 
 
                                 <div class="proposal_status_section_2">
-                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">กรรมการคนที่ 1</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
-                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">กรรมการคนที่ 2</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
-                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">กรรมการคนที่ 3</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left"><p>กรรมการคนที่ 1</p></div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left"><p>กรรมการคนที่ 2</p></div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left"><p>กรรมการคนที่ 3</p></div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
                                     
                                 </div>
 
@@ -80,10 +79,10 @@
 
 
                                 <div class="proposal_status_section_2">
-                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">วันที่</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
-                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">เวลา</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
-                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">สถานที่</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
-                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left">หมายเหตุ</div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left"><p>วันที่</p></div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left"><p>เวลา</p></div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left"><p>สถานที่</p></div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
+                                    <div class="proposal_status_section_2_all"><div class="proposal_status_section_2_left"><p>หมายเหตุ</p></div><div class="proposal_status_section_2_right"><input type="text" readonly placeholder="ยังไม่มีการอนุมัติ"></div></div>
                                     
                                 </div>
                             </div>
