--- a/Assignment/std/profile.html
+++ b/Assignment/std/profile.html
@@ -40,7 +40,7 @@
         
 
             <div class="info">
-                <div class="navside_all">
+                <div id="navside_all" class="navside_all">
                     <a href="profile.html" class="navside_all_one">โปรไฟล์</a>
                     <a href="proposal_sub.html">เสนอหัวข้อ</a>
                     <a href="proposal_status.html">สถานะหัวข้อ</a>
