--- a/Assignment/std/proposal_sub.html
+++ b/Assignment/std/proposal_sub.html
@@ -57,6 +57,7 @@
                             </select>
                             <h5>วิชาที่อยู่ในประเภทโครงงานที่เลือก:</h5>
                             <select name="" id="">
+                                <option value="" disabled selected>เลือกวิชา</option>
                                 <option value="">Intro</option>
                                 <option value="">Computer Programming</option>
                             </select>
