--- a/Assignment/subject/profile.html
+++ b/Assignment/subject/profile.html
@@ -122,9 +122,9 @@
                                     <input type="text" readonly placeholder="#">
                                 </div>
                                 <div class="report_1_2">
-                                    <h4>อนุมัติสอบหัวข้อโครงงาน</h4>
+                                    <!-- <h4>อนุมัติสอบหัวข้อโครงงาน</h4>
                                     <button>ตกลง</button>
-                                    <p>เงื่อนไข: ต้องผ่านแก้ไขอย่างน้อย <strong>1 ครั้ง</strong></p>
+                                    <p>เงื่อนไข: ต้องผ่านแก้ไขอย่างน้อย <strong>1 ครั้ง</strong></p> -->
                                 </div>
                                 <div class="report_1_img">
                                     <img src="../img/LOGO-KMUTNB--300x300.png" alt=""><input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
@@ -340,9 +340,9 @@
                                     <input type="text" readonly placeholder="#">
                                 </div>
                                 <div class="report_1_2">
-                                    <h4>อนุมัติสอบหัวข้อโครงงาน</h4>
+                                    <!-- <h4>อนุมัติสอบหัวข้อโครงงาน</h4>
                                     <button>ตกลง</button>
-                                    <p>เงื่อนไข: ต้องผ่านแก้ไขอย่างน้อย <strong>1 ครั้ง</strong></p>
+                                    <p>เงื่อนไข: ต้องผ่านแก้ไขอย่างน้อย <strong>1 ครั้ง</strong></p> -->
                                 </div>
                                 <div class="report_1_img">
                                     <img src="../img/LOGO-KMUTNB--300x300.png" alt=""><input type="text" readonly placeholder="นายจิรายุ">
