--- a/Assignment/consultant/profile.html
+++ b/Assignment/consultant/profile.html
@@ -197,6 +197,21 @@
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
                                 <div class="consultant_progress_3_download"><a href="#" download class="consultant_progress_3_download_1">Download</a><div class="consultant_progress_3_download_2"></div></div>
+                                <div class="per_sub"><select name="" id="">
+                                        <option value="" disabled selected>ลงเปอร์เซ็นความคืบหน้า</option>
+                                        <option value="">0</option>
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                        <option value="">4</option>
+                                        <option value="">5</option>
+                                        <option value="">6</option>
+                                        <option value="">7</option>
+                                        <option value="">8</option>
+                                        <option value="">9</option>
+                                        <option value="">10</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="consultant_progress_4">
                                 <div class="consultant_progress_4_all">
@@ -411,7 +426,22 @@
                                 <textarea name="" id=""></textarea>
                                 <p>ข้อคิดเห็นจากอาจารย์ประจำวิชา</p>
                                 <input type="text" readonly placeholder="">
-                                <input type="file">
+                                <div class="consultant_progress_3_download"><a href="#" download class="consultant_progress_3_download_1">Download</a><div class="consultant_progress_3_download_2"></div></div>
+                                <div class="per_sub"><select name="" id="">
+                                        <option value="" disabled selected>ลงเปอร์เซ็นความคืบหน้า</option>
+                                        <option value="">0</option>
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                        <option value="">4</option>
+                                        <option value="">5</option>
+                                        <option value="">6</option>
+                                        <option value="">7</option>
+                                        <option value="">8</option>
+                                        <option value="">9</option>
+                                        <option value="">10</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="consultant_progress_4">
                                 <div class="consultant_progress_4_all">
