--- a/Assignment/login/register.html
+++ b/Assignment/login/register.html
@@ -34,8 +34,8 @@
                 </select>
                 <h4>ระบุรหัสเพื่อนร่วมกลุ่ม (ถ้ามี 2 คน)</h4><input type="password">
                 <div class="regis_bt">
-                    <button class="regis_btcf">ตกลง</button>
-                    <button class="regis_btcc">ยกเลิก</button>
+                    <a href="login.html" style="background-color: rgb(43, 206, 152); color:white;">ตกลง</a>
+                    <a href="index.html" style="background-color: rgb(250, 59, 59); color:white;">ยกเลิก</a>
                 </div>
             </div>
         </div>
