--- a/Assignment/login/index.html
+++ b/Assignment/login/index.html
@@ -27,6 +27,7 @@
 
 
     <div class="section">
+        <div class="s_index0"><a href="list.html"><p style="text-align: end;">รายชื่อโครงงาน</p></a></div>
        <div class="s_index1">
         <h2>📊 แดชบอร์ดโครงงานนักศึกษา</h2>
        </div>
